--- a/.env
+++ b/.env
@@ -1,3 +1,13 @@
 #.env
 
 COHERE_API_KEY = "OoT7emhgR2asp3z4fmtBa8dgGJ5OhPCZaEZrE8Fy"
+
+GROQ_API_KEY = "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"
+
+GEMINI_API_KEY = "AIzaSyD8q7sUeT7pMXP6UGlD6uSAdOWagpg37cU"
+
+MISTRAL_API_KEY = "67xsjXO4DvBd4bUBQwV4bfhDylhOJvtQ"
+
+OPENAI_API_KEY = "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"
+
+
